Made message consistent across platforms

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="center">
         <section class = "greeting">
           <div class="middle">
-            <p>nice to see you</p>
+            <p>nice to see you!</p>
           </div>
         </section>
       </div>
